fixed some small style issues on smaller screens

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -3,20 +3,22 @@ body{
     height:100vh;
     margin:0px;
     background-color:black;
-    background-image: url("../assets/background.webp");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
     backdrop-filter: blur(2px);
     font-family: monospace;
 }
 
 .header{
-    width:100%;
-    height:100px;
-    margin:0px;
-    padding-top: 50px;
-    text-align:center;background: -webkit-linear-gradient(yellow, rgb(255, 166, 0));
+    padding-top: 5px;
+    padding-bottom: 5px;
+    text-align:center;
+    background-image: url("../assets/background.webp");
+    background-repeat: no-repeat;
+    background-size:cover;
+    background-position: top;
+}
+
+.title{
+    background: -webkit-linear-gradient(yellow, rgb(255, 166, 0));
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -26,10 +28,18 @@ body{
 }
 
 @media screen and (max-width: 767px){
-    .header{
+    .title{
         font-size: 50px;
     }
-   }
+}
+
+.body{
+    width:100%;
+    padding-bottom: 20px;
+    text-align: center;
+    color:white;
+    opacity: 95%;
+}
 
 .tab-container{
     width:100%;
@@ -42,7 +52,6 @@ body{
     height:10%;
     margin:0px;
     cursor:pointer;
-    background-color:black;
     color:white;
     cursor: pointer;
 }
@@ -59,15 +68,6 @@ body{
     color: white;
 }
 
-.body{
-    width:100%;
-    min-height:72.9vh;
-    padding-bottom: 20px;
-    background-color:black;
-    text-align: center;
-    color:white;
-    opacity: 95%;
-}
 
 .dive-data h2{
     color:yellow;
